[package]
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2018"
name = "tcptunnel"
version = "0.1.0"
license = "GPL-2.0-or-later"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
futures = "0.3"
clap = { version = "3", features = ["derive"] }
anyhow = "1.0"
socket2 = { version = "0.3.17", features = ["reuseport"] }
url = "2.2"
rtp = "0.6"
webrtc-util = "0.5"
indicatif = "0.16"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"
audiopus = "0.2"
cpal = "0.13"
flume = "0.10"
